--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6
   flutter_bloc: ^8.1.3
+  bloc_concurrency: ^0.2.5
   http: ^1.2.0
   flutter_secure_storage: ^9.2.4
   bip39: 1.0.6
